# manse

./: .ignore  .manse.json  AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix  init.lua
docs/: integrating-with-manse.md  vendor-patches.md
egui_term/src/: view.rs
egui_term/src/backend/: mod.rs  settings.rs
patches/alacritty_terminal/: .cargo_vcs_info.json  Cargo.toml
patches/alacritty_terminal/src/: event.rs
patches/alacritty_terminal/src/term/: mod.rs
patches/alacritty_terminal/src/tty/: mod.rs  unix.rs
patches/vte/src/: ansi.rs
plugins/claude/: README.md  clear-desc.sh  notify.sh
plugins/fish/: manse.fish
plugins/neovim/: README.md
plugins/neovim/lua/manse/: init.lua
src/: app.rs  command.rs  config.rs  fonts.rs  gui.rs  icons.rs  id.rs  ipc.rs  ipc_protocol.rs  main.rs  persist.rs  terminal.rs  workspace.rs
src/app/: input.rs  ipc.rs  mod.rs  perf.rs  terminals.rs
src/terminal/: backend.rs  content.rs  mod.rs  renderer.rs
src/ui/: command_palette.rs  dialogs.rs  dialogs_state.rs  mod.rs  sidebar.rs  status_bar.rs  terminal_area.rs  terminal_strip.rs
src/util/: README.md  icons.rs  ids.rs  layout.rs  mod.rs
