[package]
name = "manse-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manse"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "0.37", features = ["ttf"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alacritty_terminal = "0.25"
parking_lot = "0.12"
polling = "3"
signal-hook = "0.3"
bitflags = "2"
log = "0.4"
