[package]
name = "manse-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manse"
path = "src/main.rs"

[dependencies]
# GUI
eframe = "0.33"
egui = "0.33"
egui_term = { path = "egui_term" }

# Utilities
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
