[package]
name = "manse-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manse"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.33", features = ["default_fonts"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
egui_term = { path = "egui_term" }

# Utilities
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
nanoid = "0.4"
libc = "0.2"

# Fonts (macOS system font lookup via Core Text)
core-text = "21"
core-foundation = "0.10"
ttf-parser = "0.25"

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[patch.crates-io]
vte = { path = "patches/vte" }
alacritty_terminal = { path = "patches/alacritty_terminal" }
